adding  auto-grow directive  used inside Courses component

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,5 +1,6 @@
 <h2>Courses</h2>
 <p>here is a list of Course title with professor name</p>
+ <input type="text" auto-grow="">
 <ul>
 
   <li *ngFor="let course of arr_courses">
