--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,6 +1,7 @@
 <h2>Courses</h2>
 <p>here is a list of Course title with professor name</p>
- <input type="text" auto-grow="">
+<pre>Note : the search filter function is not implemented yet</pre>
+ <label for="filter_course">Enter a search filter for courses :</label>  <input id='filter_course' type="text" auto-grow="">
 <ul>
 
   <li *ngFor="let course of arr_courses">
