--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,26 @@
 <h1>
   {{title}}
 </h1>
+<h2> data binding</h2>
+<p> On next 2 lines there is an example of 2 way data binding syntax</p>
+<a href="https://angular.io/docs/ts/latest/guide/template-syntax.html#!#sts=Binding%20syntax:%20An%20overview">
+  Refer to Angular doc for explanation</a><br><br>
+
 <label for="txt_first_name">Enter your name please : </label>
 <input id="txt_first_name" type="text" [value]="student_name" (input)="student_name = $event.target.value">
+<br><br>
+<label for="txt_student_name">Here is another real time copy of your name that you can also edit: </label>
+<!-- next line is short way of writing  2 way data binding -->
+<input id="txt_student_name" type="text" [(ngModel)]="student_name">
+
+<br><br>next line is short way of doing one way data binding from view to data source<br>
+<label for="txt_student_name_one_way">Here is an input for your name that will not update when other changes: </label>
+<input id="txt_student_name_one_way" type="text" (input)="student_name = $event.target.value">
+
 <div id="hello_student">
-  <p>Hello {{student_name}}</p>
+  <p>here we use one way data binding from data-source to view target using \{\{student_name\}\} :
+
+  <h3>Hello {{student_name}}</h3>
 </div>
 <app-courses></app-courses>
 <app-authors></app-authors>
