first version of stars component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
   <h1>
     {{title}}
   </h1>
-  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-  <a href="https://github.com/valor-software/ng2-bootstrap#install-from-cdn">ng2-bootstrap is integrated !</a>
+  <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+  Bootstrap css is integrated.
+  <a href="https://github.com/valor-software/ng2-bootstrap#install-from-cdn">But ng2-boostrap does not work in this
+    version of angular2!
+  </a>
 
   <h2>Data binding</h2>
   <p> The next 2 input text are two examples of 2-way data binding with different syntax</p>
